logs/watchdog_20251013_0915.log
[13/10/2025  9:15:01,62] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025  9:15:01,80] END WATCHDOG 
